[fix] (ABC-930): Allow inline date picker arrows to overflow items

--- a/src/modules/base/dateTimePicker/dateTimePicker.css
+++ b/src/modules/base/dateTimePicker/dateTimePicker.css
@@ -75,6 +75,7 @@
     bottom: 1.6rem;
     transition: opacity 0.2s ease-in-out;
     opacity: 0;
+    z-index: 1;
 }
 
 .avonni-date-time-picker__inline-date-picker-previous-button {
